# telepresence-demo-user-service

./: .gitignore  Dockerfile  Makefile  Tiltfile  pyproject.toml  requirements-dev.txt  requirements.txt
k8s/dev/: deploy.yaml
k8s/local/: deploy.yaml
src/: app.py  models.py
