[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telepresence-demo-user-service"
version = "0.0.1"
dependencies = [
  "fastapi>=0.115.8",
  "uvicorn>=0.34.0",
  "fastapi[standard]>=0.115.8",
  "PyJWT>=2.10.1"
]

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "isort>=5.10.1",
  "pip-tools>=6.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff"
]

# linting config
[tool.ruff.lint]
ignore = ["E501"]

# isort config
[tool.isort]
profile = "black"
line_length = 79
skip = [".env/", "venv", ".venv"]

# coverage config
[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.hatch.build.targets.wheel]
packages = ["src"]

# formatting config
[tool.black]
line-length = 79
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''

